[gd_scene load_steps=2 format=3 uid="uid://d1t1qhykipkoc"]

[ext_resource type="Script" path="res://FormationEditor/Units/character_ui.gd" id="1_fuu1b"]

[node name="Character" type="MarginContainer"]
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_fuu1b")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.417257, 0.417257, 0.417257, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Content" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Stats" type="GridContainer" parent="MarginContainer/Content"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "Guard"
placeholder_text = "Name"

[node name="EmojiLabel" type="Label" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "Emoji:"

[node name="Emoji" type="LineEdit" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "üèπ"
placeholder_text = "Name"

[node name="SizeLabel" type="Label" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "Size:"

[node name="SizeEdit" type="SpinBox" parent="MarginContainer/Content/Stats"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="Category" type="Label" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "Category:"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/Content/Stats"]
layout_mode = 2

[node name="Color" type="Label" parent="MarginContainer/Content/Stats"]
layout_mode = 2
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="MarginContainer/Content/Stats"]
layout_mode = 2

[node name="Interaction" type="HBoxContainer" parent="MarginContainer/Content"]
layout_mode = 2
alignment = 1

[node name="Delete" type="Button" parent="MarginContainer/Content/Interaction"]
layout_mode = 2
text = "üóëÔ∏è"

[node name="Duplicate" type="Button" parent="MarginContainer/Content/Interaction"]
layout_mode = 2
text = "‚ûï"

[connection signal="pressed" from="MarginContainer/Content/Interaction/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="MarginContainer/Content/Interaction/Duplicate" to="." method="_on_duplicate_pressed"]
